@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.216 2002-09-06 00:42:51 castaglia Exp $
+$Id: NEWS,v 1.217 2002-09-06 00:59:04 castaglia Exp $
 
 CVS
 ---------------------------------
@@ -9,6 +9,7 @@ CVS
 - Bug 1076 - Toggle parsing of .ftpaccess files with a AllowOverride
 - Bug 1724 - AuthPAM off does not work beginning 1.2.5
 - Bug 1592 - mod_sql doesn't cache failed uid lookups
+- Bug 1719 - Add RFC2228 stuff to distribution
 
 1.2.6 - Released 2002-09-04
 ---------------------------------
